syntax = "proto3";
package com.krickert.search.model;
option java_multiple_files = true;

message PipelineReloadRequest {
  string pipeline_name = 1;
}
message PipelineReloadResponse {
  bool success = 1;
  string message = 2;
}
message PipeStepReloadRequest {
  string service_name = 1;
}
message PipeStepReloadResponse {
  bool success = 1;
  string message = 2;
}
message ApplicationChangeEvent {
  string application = 1;
}
message ApplicationChangeResponse {
  bool success = 1;
  string message = 2;
}

service ReloadService {
  rpc reloadPipeline(PipelineReloadRequest) returns (PipelineReloadResponse);
  rpc reloadService(PipeStepReloadRequest) returns (PipeStepReloadResponse);
  rpc applicationChanged(ApplicationChangeEvent) returns (ApplicationChangeResponse);
}
